[package]
name = "nergal"
version = "0.0.1"
authors = ["Andrey Lesnikov <ozkriff@gmail.com>"]
description = "Nergal is turn-based hexagonal tactical game"
license = "MIT"
repository = "https://github.com/ozkriff/nergal"
keywords = ["opengl", "3D", "game"]

[dependencies]
glium = "*"
clock_ticks = "*"
