[package]
name = "nergal"
version = "0.0.1"
authors = ["Andrey Lesnikov <ozkriff@gmail.com>"]
description = "Nergal is turn-based hexagonal tactical game"
license = "MIT"
repository = "https://github.com/ozkriff/nergal"
keywords = ["opengl", "3D", "game"]
readme = "README.md"

[dependencies]
glium = "*"
time = "*"
cgmath = "*"

[dependencies.image]
version = "*"
default-features = false
features = ["png_codec"]

[target.'cfg(target_os = "android")'.dependencies.android_glue]
version = "*"

[package.metadata.android]
assets = "assets"
